Retoques de estilizações

--- a/tarefas.html
+++ b/tarefas.html
@@ -26,7 +26,7 @@
 
     <div class="user-info">
       <p id="nomeUsuario">Nome usuário</p>
-      <div class="user-image"></div>
+      <div class="user-image" id="user-image"></div>
       <p id="closeApp">Finalizar sessão</i>
       </p>
     </div>
