--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </form>
     <div class="ingressar">
-      <a href="signup.html">Não possui conta? Crie agora mesmo</a>
+      <a href="signup.html" id="ingresso">Não possui conta? Crie agora mesmo</a>
     </div>
   </div>
 
