--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
 
     </form>
     <div class="ingressar">
-      <a href="index.html">Já possui conta? Acesse aqui</a>
+      <a href="index.html" id="ingresso">Já possui conta? Acesse aqui</a>
     </div>
   </div>
 
