--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
   </div>
 
-  <script src="/scripts/main.js"></script>
-  <script src="/scripts/login.js"></script>
+  <script src="./scripts/main.js"></script>
+  <script src="./scripts/login.js"></script>
 
 </body>
 
