--- a/tarefas.html
+++ b/tarefas.html
@@ -81,7 +81,7 @@
       </li>
   </ul>
 
-  <script src="/scripts/tarefas.js"></script>
+  <script src="./scripts/tarefas.js"></script>
 
 </body>
 
