--- a/tarefas.html
+++ b/tarefas.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,11 @@
 </head>
 
 <body>
+
   <header>
+
+    <button onclick="changeTheme()" class="botao-tema" id="botaoMudarTema">🌙</button>
+    
     <nav>
       <a href="#">Tarefas</a>
     </nav>
@@ -82,6 +87,10 @@
   </ul>
 
   <script src="/scripts/tarefas.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
 
 </body>
 
